[build-system]
    requires = ["setuptools>=61.0.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "pangebin"
    version = "0.0.2"
    description = "PlasBin-flow adapted for pangenomes."
    authors = [
        { name = "msgr0", email = "m.sgro2@campus.unimib.it" },
        { name = "vepain", email = "victorepain@disroot.org" },
    ]
    readme = "README.md"
    license = { file = "LICENSE" }
    requires-python = ">=3.10"

    dependencies = [
        "bidict >=0.23, <0.24",
        "biopython >=1.84, <1.85 ",
        "contourpy >=1.3, <1.4 ",
        "cycler >=0.12, <0.13",
        "fonttools >=4.55, <4.56",
        "gfapy >= 1.2, <1.3",
        "gurobipy >=12.0, <12.1",
        "kiwisolver >=1.4, <1.5",
        "matplotlib >=3.9, <3.10",
        "networkx >=3.4, <3.5",
        "numpy >=2.1, <2.2",
        "packaging >=24.2, <24.3",
        "pandas >=2.2, <2.3",
        "pillow >=11.0, <11.1",
        "psutil >=6.1, <6.2",
        "pyparsing >=3.2, <3.3",
        "python-dateutil >=2.9, <2.10",
        "pytz >=2024.2, <2024.3",
        "scipy >=1.14, <1.15",
        "seaborn >=0.13, <0.14",
        "six >=1.16, <1.17",
        "tzdata >=2024.2, <2024.3",
        "PyYAML >=6.0, < 6.1",
        "typer >=0.15, <0.16",
    ]

    [project.scripts]
        pangebin = "pangebin.__main__:main"

[tool.setuptools.package-data]
    pangebin = ["py.typed"]
