[build-system]
    requires = ["setuptools>=61.0.0", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "pangebin"
    version = "0.3.0"
    description = "PlasBin-flow adapted for pangenomes."
    authors = [
        { name = "msgr0", email = "m.sgro2@campus.unimib.it" },
        { name = "vepain", email = "victorepain@disroot.org" },
    ]
    readme = "README.md"
    license = { file = "LICENSE" }
    requires-python = ">=3.10"

    dependencies = [
        "bidict >=0.23, <1.0",
        "bgzip >=0.5, <1.0",
        "typing_extensions >=4.12, <5.0",
        "biopython >=1.84, <2.0 ",
        "gfapy >=1.2, <2.0",
        "gurobipy >=12.0, <13.0",
        "networkx >=3.4, <4.0",
        "numpy >=2.1, <3.0",
        "pandas >=2.2, <3.0",
        "scipy >=1.14, <2.0",
        "PyYAML >=6.0, <7.0",
        "typer >=0.15, <1.0",
        "defusedxml >=0.7.1, <1.0",
    ]

    [project.scripts]
        pangebin = "pangebin.__main__:main"

[tool.setuptools.package-data]
    pangebin = [
        "py.typed",
        "gc_content/default_gc_content_intervals.tsv",
        "pipeline/seed_thresholds/pipeline_seed_thresholds_cfg.yaml",
    ]
